--- a/project/templates/game/services.html
+++ b/project/templates/game/services.html
@@ -19,7 +19,7 @@
     <h3>📞 Как заказать съемку?</h3>
     <ol>
         <li>Позвоните мне по телефону: <strong>+7 (999) 123-45-67</strong></li>
-        <li>Обсудим детали и договоримся о дате</li>
+        <li>Дъякую</li>
         <li>Встретимся на съемке</li>
         <li>Вы получите готовые фото через 3-5 дней</li>
     </ol>
