добавлен раздел отзывы

--- a/project/templates/game/base.html
+++ b/project/templates/game/base.html
@@ -116,6 +116,7 @@
     <div class="menu">
         <a href="{% url 'home' %}">Главная</a>
         <a href="{% url 'services' %}">Услуги и цены</a>
+        <a href="{% url 'reviews' %}">Отзывы</a>
         <a href="#contact">Контакты</a>
     </div>
 
