минорный перенос стилей из base

--- a/project/templates/game/base.html
+++ b/project/templates/game/base.html
@@ -109,7 +109,7 @@
 <body>
     <!-- Шапка сайта -->
     <div class="header">
-        <h1>📷 Фотограф Алексей</h1>
+        <h1>📷 Фотограф Гадель</h1>
         <p>Профессиональная фотосъемка в Москве</p>
     </div>
 
@@ -129,7 +129,7 @@
 
     <!-- Подвал -->
     <div class="footer">
-        <p>© 2024 Фотограф Алексей. Телефон: +7 (999) 123-45-67</p>
+        <p>© 2024 Фотограф Гадель. Телефон: +7 (999) 123-45-67</p>
     </div>
 </body>
 </html>
