--- a/project/templates/game/home.html
+++ b/project/templates/game/home.html
@@ -1,7 +1,7 @@
 {% extends 'game/base.html' %}
 
 {% block content %}
-<h2>Мое портфолио</h2>
+<h2>Галерея моих работ</h2>
 <p>Посмотрите примеры моих работ</p>
 
 <div class="gallery">
