--- a/project/templates/game/contact.html
+++ b/project/templates/game/contact.html
@@ -2,18 +2,17 @@
 
 
 {% block content %}
-<h2>📞Мои Контакты</h2>
+<h2>Мои Контакты</h2>
 <p>Звоните с 8:00 до 18:00</p>
-<div style="background: #e8f4f8; padding: 20px; border-radius: 8px; margin-top: 30px;">
+<div class="contacts-box">
+    <ul>
         <li>
-            <a href="https://github.com/gadelgds"
-            target="_blank">
+            <a href="https://github.com/gadelgds" target="_blank">
                 Гитхаб
             </a>
         </li>
         <li>
-            <a href="https://web.telegram.org/k/@Magicmysles"
-            target="_blank">
+            <a href="https://web.telegram.org/k/@Magicmysles" target="_blank">
                 Telegram
             </a>
         </li>
